# aims-multibot

aims_environment/: CMakeLists.txt  package.xml
aims_environment/launch/: load_all.launch  test_all.launch
aims_environment/meshes/: lincoln_welder_rough.STL  pickTable_r3_collision.STL
aims_environment/meshes/bases/collision/: base_r1.STL  base_r2.STL  base_r3.STL
aims_environment/meshes/bases/visual/: base_r1.STL  base_r2.STL  base_r3.STL
aims_environment/meshes/tormach1100/: tormach1100_collision_rough.STL  tormach1100_visual.STL
aims_environment/urdf/: environment.xacro  environment_macro.xacro
aims_wc1_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
aims_wc1_moveit_config/config/: aims_wc1.srdf  controllers.yaml  fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml
aims_wc1_moveit_config/launch/: aims_wc1_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
aims_wc1_support/: CMakeLists.txt  package.xml
aims_wc1_support/config/: joint_names_cluster_r123.yaml  joint_names_wc1.yaml  motion_interface_wc1.yaml
aims_wc1_support/launch/: load_wc1.launch  robot_interface_streaming_wc1.launch  robot_state_visualize_wc1.launch  test_wc1.launch
aims_wc1_support/meshes/bases/collision/: asm_R1_mount.STL  asm_R1_mount_labCoords.STL  asm_R2_mount.STL  asm_R3_mount_labCoords.STL
aims_wc1_support/meshes/equipment/: dx200_controller_boxes.STL  tormach_mill_rough.STL
aims_wc1_support/test/: launch_test_wc1.xml
aims_wc1_support/urdf/: cluster_ma2010_ms210_mh50_macro.xacro  endeffectors_macro.xacro  environment_macro.xacro  wc1_robots.xacro  wc1_rough.xacro
cluster_r123_moveit_config/config/: kinematics.yaml
cluster_r123_moveit_config/launch/: chomp_planning_pipeline.launch.xml  cluster_ma2010_ms210_mh50_moveit_controller_manager.launch.xml  default_warehouse_db.launch  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch
core/: package.xml
core/config/: joint_names_cluster_r123.yaml  motion_interface_cluster_r123.yaml
core/launch/: load_cluster_r123.launch  robot_interface_streaming_cluster_r123.launch  robot_state_visualize_cluster_r123.launch  test_cluster_r123.launch
core/meshes/bases/: pickTable_R3.STL
core/meshes/bases/collision/: asm_R3_mount.STL
core/meshes/bases/visual/: asm_R2_mount_labCoords.STL
core/urdf/: cluster_ma2010_ms210_mh50.xacro  cluster_ma2010_ms210_mh50_macro.xacro  endeffectors_macro.xacro  environment_macro.xacro
motoman/motoman_driver/include/motoman_driver/industrial_robot_client/: joint_trajectory_action.h
motoman/motoman_driver/src/industrial_robot_client/: joint_trajectory_action.cpp
motoman/motoman_mh50_support/urdf/: mh50_macro.xacro
motoman/motoman_ms210_support/meshes/ms210/collision/: base_link.stl  link_1_s.stl  link_2_l.stl  link_3_u.stl  link_4_r.stl  link_5_b.stl  link_6_t.stl
moveit/cluster_r123_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit/cluster_r123_moveit_config/config/: cluster_ma2010_ms210_mh50.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
moveit/cluster_r123_moveit_config/launch/: cluster_ma2010_ms210_mh50_moveit_controller_manager.launch.xml  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
moveit/motoman_cluster_r123_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
moveit/motoman_cluster_r123_moveit_config/config/: cluster_ma2010_ms210_mh50.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
moveit/motoman_cluster_r123_moveit_config/launch/: chomp_planning_pipeline.launch.xml  cluster_ma2010_ms210_mh50_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
