<?xml version="1.0"?>
<package format="2">
  <name>core</name>
  <version>0.1.0</version>
  <description>
    <p>
        OSU AIMS Lab Core Robot Control and Configuration
    </p>
    <p>
        This package contains configuration data and launch files
        for robots in the AIMS Lab @ Ohio State.
      </p>
    <p>
     <b>Specifications</b>
    </p>
    <ul>
     <li>MS210  - Developed by AIMS Lab (acbuynak)</li>
     <li>MH50   - Default</li>
     <li>MA2010 - Default</li>
    </ul>
    <p>
        All urdfs are based on emperically measured locations provided by hansen95.
      </p>
    <p>
        Before using any of the configuration files and / or meshes included
        in this package, be sure to check they are correct for the particular
        robot model(s) and configuration you intend to use them with.
      </p>

  </description>

  <!-- META DATA -->
  <license>BSD-Clause 4</license>
  <author>acbuynak</author>
  <maintainer email="buynak.9@buckeyemail.osu.edu">acbuynak (AIMS Lab @ The Ohio State University)</maintainer>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>moveit_ros_perception</build_depend>
  <build_depend>moveit_visual_tools</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>moveit_ros_perception</exec_depend>
  <exec_depend>moveit_visual_tools</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>

  <exec_depend>motoman_ma2010_support</exec_depend>
  <exec_depend>motoman_ms210_support</exec_depend>
  <exec_depend>motoman_mh50_support</exec_depend>

  <test_depend>moveit_resources</test_depend>

</package>
